# apps/api/src/modules/text/dto/convert-text-request.schema.ts
@@ -1,6 +1,7 @@
 import { z } from 'zod';
 
 export const convertTextRequestSchema = z.strictObject({
+  validateSource: z.boolean().optional(),
   text: z.string(),
   from: z.enum(['unicode', 'zawgyi']),
   to: z.enum(['unicode', 'zawgyi']),
